# llvm-project

./: CMakeLists.txt  RenameIdentifiers.cpp  test_rename.cpp
clang/: CMakeLists.txt
clang/lab1/Eremenko_Danil/: CMakeLists.txt  DeprecatedWarn.cpp
clang/lab1/Golubev_George/: CMakeLists.txt  WarnDeprecatedFunction.cpp
clang/lab1/Karimova_Ksenia/: CMakeLists.txt  DeprecatedWarning.cpp
clang/lab1/Kudasov_Maxim/: CMakeLists.txt  KickDeprecated.cpp  WarnDeprecated.cpp
clang/lab1/Osipenko_Ilya/: CMakeLists.txt  PrintClassNames.cpp
clang/lab1/Sevostyanov_Vladimir/: AddAttribute.cpp  CMakeLists.txt  test.cpp
clang/lab1/Tolmachev_Maxim/: CMakeLists.txt  PrintClassMembers.cpp  test.cpp
clang/lab1/plugin/: AlwaysInlineNoCondition.cpp  CMakeLists.txt  Dockerfile  run.sh
clang/lab1/plugin/test/: test.cpp
clang/test/lab1/Eremenko_Danil/: test.cpp
clang/test/lab1/Golubev_George/: test.cpp
clang/test/lab1/Karimova_Ksenia/: deprecated_plugin.cpp
clang/test/lab1/Kudasov_Maxim/: test.cpp  testCheck.cpp  testCheckNotFunc.cpp  testNotFunc.cpp
clang/test/lab1/Osipenko_Ilya/: test.cpp
clang/test/lab1/kashnikova_anna/: CMakeLists.txt  PrintClassAttrs.cpp  test.cpp
llvm/labs/lab2/golubev_george/: CMakeLists.txt  WrapLoop.cpp  WrapLoop.h
llvm/test/lab2/golubev_george/: main.cpp  test.ll
